--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .break-word {
+      word-break: break-word;
+    }
+  }
+  
