--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Allison&family=Berkshire+Swash&family=Dancing+Script:wght@400..700&family=Fira+Mono:wght@400;500;700&family=Great+Vibes&family=Inconsolata:wght@200..900&family=Lobster&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Pacifico&family=Playwrite+CO+Guides&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
